# mlml

./: Cargo.toml  README.md  config.json
mlml-dataset/: Cargo.toml  dataset.db
mlml-dataset/src/: eval.rs  expr.rs  generator.rs  lib.rs  main.rs  parser.rs
mlml-model/: Cargo.toml
mlml-model/examples/: infer.rs  train.rs
mlml-model/src/: inference.rs  lib.rs  model.rs  training.rs
mlml-model/src/data/: batcher.rs  dataset.rs  tokenizer.rs
mlml-util/: Cargo.toml
mlml-util/src/: lib.rs
