[package]
name = "mlml-dataset"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme.workspace = true
authors = ["ljedrz <ljedrz@gmail.com>"]

[dependencies]
mlml-util = { path = "../mlml-util" }
rand = "0.9.1"
rand_xorshift = "0.4.0"
rusqlite = { workspace = true }
serde_json = { workspace = true }
