[package]
name = "mlml-model"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme.workspace = true
authors = ["ljedrz <ljedrz@gmail.com>"]

[features]
default = ["tch-cpu"]
f16 = []
flex32 = []
tch-cpu = ["burn/tch"]

[dependencies]
burn = { version = "0.18", features = [
    "train",
    "tui",
    "sqlite-bundled",
    "metrics",
    "autotune",
    "fusion",
    "std",
], default-features = false }
derive-new = { version = "0.7.0", default-features = false }
mlml-util = { path = "../mlml-util" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = "0.3.2"
unicode-segmentation = "1.12"
